bugfix - Fixed overlapping pagination symbols

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+[remove-bullshit] * {
+    background-image: unset;
+  }
